# ivcap-python-service-example

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.nuitka  Makefile  README.md  hello_world_service.py  img_test_service.py  pyproject.toml  requirements.txt
primitive/: Dockerfile  Makefile  requirements.txt  service.py
queue/: README.md
queue/consumer/: Dockerfile  Makefile  consumer.py  requirements.txt
queue/producer/: Dockerfile  Makefile  producer.py  requirements.txt  service.yaml
