[tool.poetry]
name = "ivcap-python-service-example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ivcap-sdk-service = "^0.6.0"
pillow = "^10.4.0"
pyyaml = "^6.0.1"
typing-extensions = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
